--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
+    "chai-fs": "peterkc/chai-fs",
     "fs-utils": "^0.7.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.1",
