--- a/test/e2e/sammler-test-repo1.yml
+++ b/test/e2e/sammler-test-repo1.yml
@@ -9,6 +9,11 @@ sources:
     repo: "sammler-test-repo1"
     path: ""
     ref: "master"
+  - name: "root-noop"
+    user: "stefanwalther"
+    repo: "sammler-test-noop"
+    path: ""
+    ref: ""
   - name: "root-files"
     user: "stefanwalther"
     repo: "sammler-test-repo1"
