--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "sammler",
   "version": "0.1.0",
   "description": "Library to fetch content from multiple GitHub repositories.",
-  "main": "dist/index.js",
   "scripts": {
     "test": "mocha test --recursive --compilers js:babel-core/register",
     "test:unit": "mocha test/unit",
     "build": "gulp build",
     "preinstall": "npm install mocha -g"
   },
+  "homepage": "https://github.com/stefanwalther/sammler#readme",
   "repository": {
     "type": "git",
     "url": "git://github.com/stefanwalther/sammler.git"
@@ -21,7 +21,7 @@
   "files": [
     "./dist/"
   ],
-  "homepage": "https://github.com/stefanwalther/sammler#readme",
+  "main": "dist/index.js",
   "dependencies": {
     "del": "^2.2.0",
     "extend-shallow": "^2.0.1",
@@ -34,6 +34,7 @@
     "string": "^3.3.1"
   },
   "devDependencies": {
+    "babel": "^6.3.13",
     "babel-core": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
