--- a/test/e2e/sammler-test-repo1.yml
+++ b/test/e2e/sammler-test-repo1.yml
@@ -3,17 +3,33 @@ gitHubApi:
   debug: false
   protocol: "https"
   timeout: 5000
+# name is for internal purposes to fetch the correct item
+# desc is the internal description to remember the test cases
 sources:
-  - name: "root"
+  - name: "root-repo1"
     user: "stefanwalther"
     repo: "sammler-test-repo1"
     path: ""
     ref: "master"
+    desc: "Root of a valid repo stefanwalther/sammler-test-repo1"
+  - name: "root-repo2"
+    user: "stefanwalther"
+    repo: "sammler-test-repo2"
+    path: ""
+    ref: "master"
+    desc: "Root of a valid repo stefanwalther/sammler-test-repo2"
+  - name: "root-repo-eh-eh"
+    user: "stefanwalther"
+    repo: "sammler-test-repo-eh-eh"
+    path: ""
+    ref: "master"
+    desc: "Root of a non-valid repo stefanwalther/sammler-test-repo-eh-eh"
   - name: "root-noop"
     user: "stefanwalther"
     repo: "sammler-test-noop"
     path: ""
     ref: ""
+    desc: "Non existing repo."
   - name: "root-files"
     user: "stefanwalther"
     repo: "sammler-test-repo1"
