--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "main": "dist/index.js",
   "dependencies": {
+    "bluebird": "^3.1.1",
     "del": "^2.2.0",
     "extend-shallow": "^2.0.1",
     "https": "^1.0.0",
