--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "string": "^3.3.1"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-core": "^6.3.17",
+    "babel": "^6.3.26",
+    "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
+    "chai-as-promised": "^5.2.0",
     "chai-fs": "peterkc/chai-fs",
     "fs-utils": "^0.7.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
+    "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.3.4"
   }
