--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Library to fetch content from multiple GitHub repositories.",
   "scripts": {
     "lint": "eslint src",
-    "test": "mocha test/unit/**/*.spec.js --compilers js:babel-core/register",
-    "test:unit": "mocha test/unit/**/*.spec.js --compilers js:babel-core/register",
-    "test:e2e": "mocha test/e2e/**/*.spec.js --compilers js:babel-core/register",
+    "test": "mocha test/**/*.spec.js --compilers js:babel-register",
+    "test:unit": "mocha test/unit/**/*.spec.js --compilers js:babel-register",
+    "test:e2e": "mocha test/e2e/**/*.spec.js --compilers js:babel-register",
     "build": "gulp build",
     "preinstall": "npm install mocha -g"
   },
@@ -40,6 +40,7 @@
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "chai-fs": "peterkc/chai-fs",
