--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - "5.3.0"
-before_script:
+before_install:
   - npm install -g babel
   - npm install -g mocha
   - npm install -g gulp
+install: npm install
+before_script: gulp build
