--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ node_js:
 before_install:
   - npm install -g babel
   - npm install -g mocha
-install: npm install
-before_script: gulp build
+install:
+  - npm install
+before_script:
+  - npm install -g gulp
+script:
+  - gulp build
