--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Library to fetch content from multiple GitHub repositories.",
   "scripts": {
     "lint": "eslint src",
-    "test": "mocha test/**/*.spec.js --compilers js:babel-register",
+    "test": "mocha --recursive --compilers js:babel-register",
     "test:unit": "mocha test/unit/**/*.spec.js --compilers js:babel-register",
     "test:e2e": "mocha test/e2e/**/*.spec.js --compilers js:babel-register",
     "build": "gulp build",
     "preinstall": "npm install eslint istanbul -g",
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- test/**/*.spec.js --compilers js:babel-register",
+    "coverage": "istanbul cover node_modules/.bin/_mocha -- --recursive --compilers js:babel-register",
     "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "homepage": "https://github.com/stefanwalther/sammler#readme",
@@ -40,8 +40,8 @@
   },
   "devDependencies": {
     "babel": "^6.3.26",
+    "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
-    "babel-istanbul": "^0.5.9",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "chai": "^3.4.1",
