--- a/.eslintrc
+++ b/.eslintrc
@@ -48,28 +48,66 @@
     "no-trailing-spaces": 2,
     "no-undef": 2,
     "no-undef-init": 2,
-    "no-underscore-dangle": 2,
+    "no-underscore-dangle": 0,
     "no-unused-expressions": 2,
     "no-use-before-define": 2,
     "no-with": 2,
     "camelcase": 2,
     "comma-spacing": 2,
     "consistent-return": 2,
-    "curly": [2, "all"],
-    "dot-notation": [2, { "allowKeywords": true }],
+    "curly": [
+      2,
+      "all"
+    ],
+    "dot-notation": [
+      2,
+      {
+        "allowKeywords": true
+      }
+    ],
     "eol-last": 2,
-    "no-extra-parens": [2, "functions"],
+    "no-extra-parens": [
+      2,
+      "functions"
+    ],
     "eqeqeq": 2,
-    "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
+    "key-spacing": [
+      2,
+      {
+        "beforeColon": false,
+        "afterColon": true
+      }
+    ],
     "new-cap": 2,
     "new-parens": 2,
-    "quotes": [2, "double"],
+    "quotes": [
+      2,
+      "double"
+    ],
     "semi": 2,
-    "semi-spacing": [2, {"before": false, "after": true}],
+    "semi-spacing": [
+      2,
+      {
+        "before": false,
+        "after": true
+      }
+    ],
     "space-infix-ops": 2,
     "space-return-throw-case": 2,
-    "space-unary-ops": [2, { "words": true, "nonwords": false }],
-    "strict": [2, "function"],
-    "yoda": [2, "never"]
+    "space-unary-ops": [
+      2,
+      {
+        "words": true,
+        "nonwords": false
+      }
+    ],
+    "strict": [
+      2,
+      "function"
+    ],
+    "yoda": [
+      2,
+      "never"
+    ]
   }
 }
