--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sammler-github",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Library to fetch content from multiple GitHub repositories.",
   "scripts": {
     "eslint": "eslint lib",
@@ -22,7 +22,7 @@
     "url": "https://github.com/stefanwalther/sammler-github/issues"
   },
   "files": [
-    "./dist"
+    "dist"
   ],
   "main": "dist/index.js",
   "dependencies": {
