--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sammler-github",
   "version": "0.1.3",
-  "description": "Library to fetch content from multiple GitHub repositories.",
+  "description": "Library to fetch content from multiple GitHub repositories (to store these locally).",
   "scripts": {
     "eslint": "eslint lib",
     "test": "mocha --recursive --compilers js:babel-register",
